--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio-stream = "0.1.17"
+chrono = { version = "0.4", features = ["serde"]}
